# codebox

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.dev.ts  vite.config.ts
apiserver/: .gitignore  README.md  app.py  config.example.yaml  config.yaml  pyproject.toml
src/: App.tsx  index.css
src/components/: add-new-project.tsx  code-box-icon.tsx  code-card.tsx  code-columns-layout.tsx  code-layout.tsx  codebox-icon.tsx  codebox-main.tsx  codebox.tsx  css-icon.tsx  heading.tsx  html-icon.tsx  js-icon.tsx  layout-selector.tsx  live-updating-toggle.tsx  long-press-button.tsx  long-press-tooltip-button.tsx  modal-header.tsx  modal-overlay.tsx  name-input.tsx  project-card.tsx  project-selector.tsx  project.-toolbar.tsx  settings-modal.tsx  theme-switch.tsx  tool-tip.tsx  tooltip-compact.tsx  view-card.tsx  virew-card.tsx
src/components/ui/: sonner.tsx
src/contexts/: layout-context.tsx  project-context.tsx  settings-context.tsx  theme-context.tsx  theme-provider.tsx  uploaded-images-provider.tsx
src/lib/: combined-styles.ts  crop-image-file.ts  styles.ts  styling.ts  utils.ts
